# linkinthe.video

./: .gitignore  AGENTS.md  Justfile  README.md  pipeline_opensource.ipynb
business/: brandvoice.md  brief.md  designguide.md  index.md  personas.md  techbrief.md  zen.md
notebooks/: pipeline_experiment.ipynb  pipeline_opensource.ipynb  prompt.txt  sample.webm
src/backend/: .env.example  pyproject.toml
src/backend/accounts/: admin.py
src/backend/config/: api.py  settings.py  urls.py  wsgi.py
src/backend/pipeline/: __init__.py  adapters.py  client.py  modal_app.py  steps.py  tests.py
src/backend/user/: admin.py  api.py  models.py  tests.py
src/backend/user/migrations/: 0001_initial.py  0002_user_api_token.py
src/backend/video/: admin.py  api.py  models.py  tests.py  views.py
src/backend/video/migrations/: 0001_initial.py
src/backend/videos/: admin.py  models.py
src/backend/videos/migrations/: 0001_initial.py
src/frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/components/ui/: button.tsx
